--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 # MODE: development | production
 MODE="development"
 PORT=8080
+
+# Apenas quando MODE é igual à production
+DB_TYPE=
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DATABASE=
