--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
@@ -25,6 +26,7 @@
     "express": "^4.18.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
     "sqlite3": "^5.1.7",
     "tsc": "^2.0.4",
