--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
   "license": "ISC",
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
+    "@types/joi": "^17.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
+    "joi-extract-type": "^15.0.8",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "joi": "^17.12.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "pg": "^8.11.3",
